--- a/src/app/components/news-form/news-form.component.html
+++ b/src/app/components/news-form/news-form.component.html
@@ -11,7 +11,7 @@
         <textarea class="form-control" name="content" id="content" [(ngModel)]="news.content"></textarea>
     </div>
 
-    <button type="submit" class="btn btn-primary">Login</button>
+    <button type="submit" class="btn btn-primary">Додај вест</button>
   </form>
   <p class="error">{{ error }}</p>
 </div>
