--- a/src/app/components/news/news.component.html
+++ b/src/app/components/news/news.component.html
@@ -1,4 +1,6 @@
 <div *ngIf="isLoaded">
   <h2>{{ news.header }}</h2>
   <p>{{ news.content }}</p>
+  <hr>
+  <input type="button" value="Избриши вест" class="btn btn-danger" (click)="delete()">
 </div>
