--- a/src/app/components/news-preview/news-preview.component.html
+++ b/src/app/components/news-preview/news-preview.component.html
@@ -1,4 +1,4 @@
 <div class="news-preview">
   <a routerLink="/news/{{ news.id }}"><h3>{{ news.header }}</h3></a>
-  <p>{{ news.content }}</p>
+  <p class="short-description">{{ news.content }}</p>
 </div>
