--- a/src/app/components/news-preview/news-preview.component.css
+++ b/src/app/components/news-preview/news-preview.component.css
@@ -1,3 +1,11 @@
 .news-preview {
     padding: 15px;
 }
+
+.short-description {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    -o-text-overflow: ellipsis;
+    white-space: nowrap;
+    width: 100%;
+}
