--- a/src/app/components/news-preview/news-preview.component.html
+++ b/src/app/components/news-preview/news-preview.component.html
@@ -1,4 +1,5 @@
 <div class="news-preview">
-  <a routerLink="/news/{{ news.id }}"><h3>{{ news.header }}</h3></a>
-  <p class="short-description">{{ news.content }}</p>
+  <span><a routerLink="/news/{{ news.id }}"><h3>{{ news.header }}</h3></a></span>
+  <div [innerHtml] = "news.content" class="short-description"></div>
+  <div class="date-created">Датум објаве: {{ news.dateCreated | date: 'dd.MM.yyyy. HH:mm'}}</div>
 </div>
