--- a/src/app/components/news/news.component.css
+++ b/src/app/components/news/news.component.css
@@ -1,4 +1,19 @@
 .content {
     white-space: pre-wrap;
     padding: 1em;
+    margin-top: 30px;
+    margin-right: 30px;
+}
+
+.spin-container {
+    margin-top: 100px;
+}
+
+.main-container {
+    margin-top: 50px;
+    margin-left: 30px;
+}
+
+.date-created {
+    color: grey;
 }
