--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -4,7 +4,7 @@
     <li><a [routerLinkActiveOptions]="{exact:true}" [routerLinkActive]="['active']" >Слике</a></li>
     <li><a [routerLinkActiveOptions]="{exact:true}" [routerLinkActive]="['active']" href="#">Видео</a></li>
     <li><a [routerLinkActiveOptions]="{exact:true}" [routerLinkActive]="['active']" href="#">Временска прогноза</a></li>
-    <li><a [routerLinkActiveOptions]="{exact:true}" [routerLinkActive]="['active']" href="#">Хороскоп</a></li>
+    <li><a [routerLinkActiveOptions]="{exact:true}" [routerLinkActive]="['active']" routerLink="/horoscope">Хороскоп</a></li>
     <li><a [routerLinkActiveOptions]="{exact:true}" [routerLinkActive]="['active']" href="#">Контакт</a></li>
   </ul>
 </nav>
