--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -18,6 +18,6 @@ li a:hover {
 }
 
 .active {
-    background-color: #595959;
+    background-color: #595959 !important;
     color: white !important;
 }
