--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,6 @@
 <nav class="navbar navbar-inverse">
   <ul class="nav navbar-nav">
+    <li><a [routerLinkActiveOptions]="{exact:true}" [routerLinkActive]="['active']" routerLink="/home">Почетна</a></li>
     <li><a [routerLinkActiveOptions]="{exact:true}" [routerLinkActive]="['active']" routerLink="/news">Вести</a></li>
     <li><a [routerLinkActiveOptions]="{exact:true}" [routerLinkActive]="['active']" >Слике</a></li>
     <li><a [routerLinkActiveOptions]="{exact:true}" [routerLinkActive]="['active']" href="#">Видео</a></li>
