--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,10 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="padding: 25px">
+<div style="padding: 15px">
     <img class="main-picture" src="assets/images/budjanovci.png">
     <app-navbar></app-navbar>
-    <router-outlet></router-outlet>
+    
+    <div style="padding: 25px">
+        <router-outlet></router-outlet>
+    </div>
 </div>
 
