--- a/src/app/components/homepage/homepage.component.css
+++ b/src/app/components/homepage/homepage.component.css
@@ -1,11 +1,17 @@
 .content {
-    white-space: pre-wrap;
-    padding: 1em;
-    margin-top: 10px;
+    margin-top: 30px;
     margin-right: 30px;
+    margin-left: 10px;
+    text-align: left;
 }
 
 .main-container {
     margin-top: 30px;
     margin-left: 30px;
+}
+
+.picture {
+    float: right;
+    margin: 30px;
+    height: 50%;
 }
