--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -6,6 +6,6 @@
     <li><a [routerLinkActiveOptions]="{exact:true}" [routerLinkActive]="['active']" href="#">Видео</a></li>
     <li><a [routerLinkActiveOptions]="{exact:true}" [routerLinkActive]="['active']" routerLink="/weather_report">Временска прогноза</a></li>
     <li><a [routerLinkActiveOptions]="{exact:true}" [routerLinkActive]="['active']" routerLink="/horoscope">Хороскоп</a></li>
-    <li><a [routerLinkActiveOptions]="{exact:true}" [routerLinkActive]="['active']" href="#">Контакт</a></li>
+    <li><a [routerLinkActiveOptions]="{exact:true}" [routerLinkActive]="['active']" routerLink="/contact">Контакт</a></li>
   </ul>
 </nav>
