--- a/src/app/components/horoscope-form/horoscope-form.component.html
+++ b/src/app/components/horoscope-form/horoscope-form.component.html
@@ -4,7 +4,7 @@
   <form #form="ngForm" (ngSubmit)="onSubmit()">
     <div class="form-group">
         <label for="content">Садржај:</label>
-        <textarea rows="20" class="form-control" name="content" id="content" [(ngModel)]="horoscope.content"></textarea>
+        <textarea rows="20" myAutofocus class="form-control" name="content" id="content" [(ngModel)]="horoscope.content"></textarea>
     </div>
 
     <button *ngIf="!editMode" type="submit" class="btn btn-primary">Додај</button>
