Added empty picture and videos component.

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -2,8 +2,8 @@
   <ul class="nav navbar-nav">
     <li><a [routerLinkActiveOptions]="{exact:true}" [routerLinkActive]="['active']" routerLink="/home">Почетна</a></li>
     <li><a [routerLinkActiveOptions]="{exact:true}" [routerLinkActive]="['active']" routerLink="/news">Вести</a></li>
-    <li><a [routerLinkActiveOptions]="{exact:true}" [routerLinkActive]="['active']" >Слике</a></li>
-    <li><a [routerLinkActiveOptions]="{exact:true}" [routerLinkActive]="['active']" href="#">Видео</a></li>
+    <li><a [routerLinkActiveOptions]="{exact:true}" [routerLinkActive]="['active']" routerLink="/pictures">Слике</a></li>
+    <li><a [routerLinkActiveOptions]="{exact:true}" [routerLinkActive]="['active']" routerLink="/videos">Видео</a></li>
     <li><a [routerLinkActiveOptions]="{exact:true}" [routerLinkActive]="['active']" routerLink="/weather_report">Временска прогноза</a></li>
     <li><a [routerLinkActiveOptions]="{exact:true}" [routerLinkActive]="['active']" routerLink="/horoscope">Хороскоп</a></li>
     <li><a [routerLinkActiveOptions]="{exact:true}" [routerLinkActive]="['active']" routerLink="/contact">Контакт</a></li>
