--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,3 +2,10 @@
     width: 100%;
     height: 400px;
 }
+
+@media only screen and (max-width: 600px) {
+    .main-picture {
+        width: 100%;
+        height: auto;
+    }
+}
