--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,9 +3,41 @@
     height: 400px;
 }
 
+.main-container {
+    padding-top: 15px;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+.router-container {
+    padding: 45px;
+}
+
 @media only screen and (max-width: 600px) {
     .main-picture {
         width: 100%;
         height: auto;
+    }
+}
+
+.radio {
+    position: fixed;
+    width: 50%;
+    height: 15px;
+    margin: 5% auto; /* Will not center vertically and won't work in IE6/7. */
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
+
+@media only screen and (max-width: 600px) {
+    .radio {
+        position: fixed;
+        width: 100%;
+        height: 45px;
+        margin: 5% auto; /* Will not center vertically and won't work in IE6/7. */
+        left: 0;
+        right: 0;
+        bottom: 0;
     }
 }
