--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,12 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="padding: 15px">
-    <img class="main-picture" src="assets/images/budjanovci.png">
+<div class="main-container">
+    <img class="main-picture" src="assets/images/budjanovci_glavna.png">
     <app-navbar></app-navbar>
     
-    <div style="padding: 25px">
+    <div class="router-container">
         <router-outlet></router-outlet>
     </div>
+
+    <app-radio class="radio"></app-radio>
 </div>
 
