--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -18,6 +18,17 @@
         width: 100%;
         height: auto;
     }
+    .router-container {
+        padding: 10px;
+    }
+
+    .radio {
+        position: fixed;
+        width: 100%;
+        height: 45px;
+        left: 0;
+        bottom: 0;
+    }
 }
 
 .radio {
@@ -26,14 +37,4 @@
     height: 50px;
     left: 0;
     bottom: 0;
-}
-
-@media only screen and (max-width: 600px) {
-    .radio {
-        position: fixed;
-        width: 100%;
-        height: 45px;
-        left: 0;
-        bottom: 0;
-    }
 }
