--- a/src/app/components/homepage/homepage.component.css
+++ b/src/app/components/homepage/homepage.component.css
@@ -17,3 +17,45 @@
     height: auto;
     width: auto\9; /* ie8 */
 }
+
+@media only screen and (max-width: 600px) {
+    .main-container {   
+        margin-top: 10px;
+        margin-left: 10px;
+    }
+    .picture {
+        margin-top: 15px;
+        margin-left: auto;
+        margin-right: auto;
+        max-width: 100%;
+        height: auto;
+        width: auto\9; /* ie8 */
+    }
+    .content {
+        margin-top: 10px;
+        margin-right: 10px;
+        margin-left: 5px;
+        text-align: left;
+    }
+}
+
+@media only screen and (-webkit-min-device-pixel-ratio: 3) and (max-width:1920px) {
+    .main-container {   
+        margin-top: 10px;
+        margin-left: 10px;
+    }
+    .picture {
+        margin-top: 15px;
+        margin-left: auto;
+        margin-right: auto;
+        max-width: 100%;
+        height: auto;
+        width: auto\9; /* ie8 */
+    }
+    .content {
+        margin-top: 10px;
+        margin-right: 10px;
+        margin-left: 5px;
+        text-align: left;
+    }
+ }
