--- a/src/app/components/horoscope/horoscope.component.css
+++ b/src/app/components/horoscope/horoscope.component.css
@@ -17,3 +17,27 @@
 .date-created {
     color: grey;
 }
+
+@media only screen and (max-width: 600px) {
+    .main-container {
+        margin-top: 10px;
+        margin-left: 10px;
+    }
+    .content {
+        white-space: pre-wrap;
+        margin-top: 10px;
+        margin-right: 10px;
+    }
+}
+
+@media only screen and (-webkit-min-device-pixel-ratio: 3) and (max-width:1920px) {
+    .main-container {
+        margin-top: 10px;
+        margin-left: 10px;
+    }
+    .content {
+        white-space: pre-wrap;
+        margin-top: 10px;
+        margin-right: 10px;
+    }
+ }
