--- a/src/app/components/news/news.component.css
+++ b/src/app/components/news/news.component.css
@@ -17,3 +17,28 @@
 .date-created {
     color: grey;
 }
+
+@media only screen and (max-width: 600px) {
+    .main-container {   
+        margin-top: 15px;
+        margin-left: 10px;
+    }
+    .content {
+        margin-top: 10px;
+        margin-right: 10px;
+    }
+    
+}
+
+@media only screen and (-webkit-min-device-pixel-ratio: 3) and (max-width:1920px) {
+    .main-container {   
+        margin-top: 15px;
+        margin-left: 10px;
+    }
+    .content {
+        white-space: pre-wrap;
+        padding: 1em;
+        margin-top: 30px;
+        margin-right: 30px;
+    }
+ }
