--- a/src/app/components/weather-report-preview/weather-report-preview.component.css
+++ b/src/app/components/weather-report-preview/weather-report-preview.component.css
@@ -4,3 +4,19 @@
     margin-top: 10px;
     margin-right: 30px;
 }
+
+@media only screen and (max-width: 600px) {
+    .content {
+        white-space: pre-wrap;
+        margin-top: 10px;
+        margin-right: 10px;
+    }
+}
+
+@media only screen and (-webkit-min-device-pixel-ratio: 3) and (max-width:1920px) {
+    .content {
+        white-space: pre-wrap;
+        margin-top: 10px;
+        margin-right: 10px;
+    }
+ }
