Added uploading images to news.

--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -11,12 +11,14 @@
         float: none;
         text-align: center;
     }
+    .menu-label {
+        display: none;
+    }
 } 
 
 @media (max-width: 768px){
     .navbar-nav {
         width: 100%;
-
     }
     .navbar-nav > li {
         text-align: center;
@@ -25,7 +27,10 @@
         padding: 0;
         margin: 0;
     }
-    
+    .menu-label {
+        color: white; 
+        margin-right: 20px;
+    }
 } 
 
 .navbar-collapse {
@@ -33,6 +38,11 @@
     padding-right: 0 !important;
 }
 
+.navbar-header {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
 
 li a:hover {
     background-color: #111;
