--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,7 @@
 <nav class="navbar navbar-inverse">
     <div>
-      <div class="navbar-header">
+      <div class="navbar-header">  
+          <span class="menu-label">Meни</span>
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
               <span class="sr-only">Toggle navigation</span>
               <span class="icon-bar"></span>
