--- a/src/app/components/news-form/news-form.component.html
+++ b/src/app/components/news-form/news-form.component.html
@@ -18,7 +18,7 @@
         id = "image"
         (uploadFinished)="onUploadFinished($event)"
         [max]="1"
-        [url]="'http://price-iz-sokaka.herokuapp.com/api/images/upload'"
+        [url]="'https://price-iz-sokaka.herokuapp.com/api/images/upload'"
         buttonCaption="Изабери слике" 
         dropBoxMessage="Превуци слике овде..." s
         clearButtonCaption="Избриши све..."></image-upload>
