Added share buttons.

--- a/src/app/components/horoscope/horoscope.component.html
+++ b/src/app/components/horoscope/horoscope.component.html
@@ -4,7 +4,7 @@
 
 <div *ngIf="isLoaded" class="main-container">
   <h3>Хороскоп  <span *ngIf="horoscope.dateCreated">за {{ horoscope.dateCreated | date: 'MM. yyyy.'}}</span></h3>
-  <div class="date-created"></div>
+  <app-my-share-buttons [url]="'https://priceizsokaka.herokuapp.com/horoscope'"></app-my-share-buttons>
   <div *ngIf="isLogged" >
       <a routerLink="/add_horoscope">Додај нов хороскоп</a>
       <hr>
@@ -16,6 +16,7 @@
     <input type="button" value="Измени" class="btn btn-primary" (click)="update()">
     <input type="button" value="Избриши" class="btn btn-danger" (click)="delete()">
   </div>
+  <app-my-share-buttons [url]="'https://priceizsokaka.herokuapp.com/horoscope'"></app-my-share-buttons>
   <div *ngIf="horoscope.content">
     <hr>
     <app-comment-list [commentableId]="horoscope.id" [commentType]="'horoscope'"></app-comment-list>
