--- a/src/app/components/news-form/news-form.component.html
+++ b/src/app/components/news-form/news-form.component.html
@@ -18,7 +18,8 @@
         id = "image"
         (uploadFinished)="onUploadFinished($event)"
         [max]="1"
-        [url]="'https://price-iz-sokaka.herokuapp.com/api/images/upload'"
+        [url]="'https://api.imgur.com/3/image'"
+        [headers]="{ Authorization: 'Client-ID c76dc3791023b1e'}"
         buttonCaption="Изабери слике" 
         dropBoxMessage="Превуци слике овде..." s
         clearButtonCaption="Избриши све..."></image-upload>
