--- a/src/app/components/news-preview/news-preview.component.css
+++ b/src/app/components/news-preview/news-preview.component.css
@@ -14,8 +14,14 @@
 }
 
 .date-created {
-    margin-top: 10px;
+    margin-right: 15px;
     color: gray;
+}
+
+.date-and-share {
+    margin-top: 10px;
+    display: flex;
+    align-items: center;
 }
 
 h3 {
