--- a/src/app/components/weather-report-list/weather-report-list.component.html
+++ b/src/app/components/weather-report-list/weather-report-list.component.html
@@ -7,8 +7,10 @@
     <hr>
   </div>
   <div *ngIf="allWeatherReports.length == 0">Нема временских прогноза.</div>
+  <app-my-share-buttons *ngIf="allWeatherReports.length > 0" [url]="'https://priceizsokaka.herokuapp.com/weather_report'"></app-my-share-buttons>
   <div *ngFor="let weatherReport of allWeatherReports">
     <app-weather-report-preview [weatherReport]="weatherReport"></app-weather-report-preview>
     <hr>
   </div>
+  <app-my-share-buttons [url]="'https://priceizsokaka.herokuapp.com/weather_report'"></app-my-share-buttons>
 </div>
