--- a/src/app/components/news/news.component.html
+++ b/src/app/components/news/news.component.html
@@ -11,6 +11,7 @@
     <input type="button" value="Измени" class="btn btn-primary" (click)="update()">
     <input type="button" value="Избриши" class="btn btn-danger" (click)="delete()">
   </div>
+  <app-my-share-buttons [url]="'https://priceizsokaka.herokuapp.com/news/' + news.id"></app-my-share-buttons>
   <hr>
   <app-comment-list [commentableId]="news.id" [commentType]="'news'"></app-comment-list>
 </div>
